dfir_rs/tests/snapshots/surface_difference_anti_join__diff_multiset_timing@graphvis_dot.snap
---
source: dfir_rs/tests/surface_difference_anti_join.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) difference_multiset()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) for_each(|x| println!(\"diff: {:?}\", x))", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) source_stream(pos_recv)", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) source_stream(neg_recv)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) tee()", shape=house, fillcolor="#ffff88"]
    n6v1 [label="(n6v1) for_each(|x| println!(\"neg: {:?}\", x))", shape=house, fillcolor="#ffff88"]
    n7v1 [label="(n7v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n8v1 [label="(n8v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n3v1 -> n8v1
    n4v1 -> n5v1
    n5v1 -> n7v1
    n5v1 -> n6v1
    n7v1 -> n1v1 [label="neg", color=red]
    n8v1 -> n1v1 [label="pos"]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 1"
        n1v1
        n2v1
        subgraph "cluster_sg_1v1_var_diff" {
            label="var diff"
            n1v1
            n2v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n4v1
        n5v1
        n6v1
        subgraph "cluster_sg_2v1_var_negs" {
            label="var negs"
            n4v1
            n5v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 0"
        n3v1
        subgraph "cluster_sg_3v1_var_poss" {
            label="var poss"
            n3v1
        }
    }
}
