dfir_rs/tests/snapshots/surface_difference_anti_join__diff_static@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_difference_anti_join.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(pos_recv)</code>"/]:::pullClass
2v1[\"(2v1) <code>source_stream(neg_recv)</code>"/]:::pullClass
3v1[\"(3v1) <code>difference::&lt;'tick, 'static&gt;()</code>"/]:::pullClass
4v1[\"(4v1) <code>sort()</code>"/]:::pullClass
5v1[/"(5v1) <code>for_each(|v| output_send.send(v).unwrap())</code>"\]:::pushClass
6v1["(6v1) <code>handoff</code>"]:::otherClass
7v1["(7v1) <code>handoff</code>"]:::otherClass
8v1["(8v1) <code>handoff</code>"]:::otherClass
1v1-->8v1
2v1-->6v1
4v1-->5v1
3v1-->7v1
6v1--x|neg|3v1; linkStyle 4 stroke:red
7v1--x4v1; linkStyle 5 stroke:red
8v1-->|pos|3v1
subgraph sg_4v1 ["sg_4v1 stratum 0"]
    1v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    subgraph sg_2v1_var_diff ["var <tt>diff</tt>"]
        3v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 2"]
    subgraph sg_3v1_var_diff ["var <tt>diff</tt>"]
        4v1
        5v1
    end
end
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    2v1
end
