dfir_rs/tests/snapshots/surface_difference_anti_join__diff_timing@graphvis_dot.snap
---
source: dfir_rs/tests/surface_difference_anti_join.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(pos_recv)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) source_stream(neg_recv)", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) difference()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) for_each(|x| output_send.send((context.current_tick().0, x)).unwrap())", shape=house, fillcolor="#ffff88"]
    n5v1 [label="(n5v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n6v1 [label="(n6v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n6v1
    n2v1 -> n5v1
    n3v1 -> n4v1
    n5v1 -> n3v1 [label="neg", color=red]
    n6v1 -> n3v1 [label="pos"]
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        subgraph sg_2v1_var_diff {
            cluster=true
            label="var diff"
            n3v1
            n4v1
        }
    }
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n2v1
    }
    subgraph sg_3v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 0"
        n1v1
    }
}
